# StructLib

./: CMakeLists.txt  main.cpp
includes/: structlib.hpp
src/: list.cpp  tree.cpp
